fix: increase portal z-index

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,7 +18,7 @@ $swipe-animation-timing-function: ease-out;
     &_portal {
         position: fixed;
         inset: 0;
-        z-index: 1000;
+        z-index: 9999;
         overflow: hidden;
         opacity: 0;
         transition: opacity var(--yarl__fade_animation_duration, $fade-animation-duration) $fade-animation-timing-function;
